--- a/louise.html
+++ b/louise.html
@@ -1,12 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>midterm</title>
-</head>
-<body>
-    hello cycu
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>midterm</title>
+        <link rel="stylesheet" href="webstyle.css">
+    </head>
+    <body>
+        <header>
+          <div class="header_content">
+            <nav class="header_nav">
+                <a href="#info">關於我</a>
+                <a href="#intern">實習經歷</a>
+                <a href="#club">社團經歷</a>
+                <a href="#competition">競賽經歷</a>
+            </nav>
+          </div>
+        </header>
+        <main>
+            <article>
+              <section id="intern" class="card">
+                <div class="intern">實習經歷</div>
+                <div class="job">
+                  <h3>捷德運動股份有限公司 | 行銷企劃實習生</h3>
+                </div>
+                <div class="cover1">
+                  <div class="area1">
+                    <div class="intern-photo">
+                      <img src="intern/intern1.jpg" alt style="width: 40%;border-radius: 5%;">
+                      <img src="intern/intern2.jpg" alt style="width: 40%;border-radius: 5%;">
+                    </div>
+                    <div class="intern_text">
+                      <p>協助客戶經營粉絲專業，文案發想及美編</p>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+              <section id="club" class="card">
+                <div class="club">社團經歷</div>
+                <div class="club-name">
+                  <h3>中原大學海外志工隊</h3>
+                </div>
+                <p style="font-size:19px;font-weight: bold; color: #463F3A;">| 柬15班 2021/01-2022/03</p>
+                  <div class="cover">
+                    <div class="area">
+                      <div class="club-img">
+                        <img src="club/上課照片.jpg" alt style="width:100%;border-radius: 5%;">
+                      </div>
+                      <div class="cover_text">
+                        <p style="color:#463F3A;font-weight: bold;">馬祖塘岐國小兩天觀光英語育樂營</p>
+                        <p style="font-size: 17px;">
+                          因為疫情所以到與台灣本島風俗民情不同的離島—馬祖舉辦英語營隊；<br>
+                          若能在不同文化背景下舉辦營隊，等到實際去柬埔寨時，就更知道如何去舉辦活動。
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="area">
+                      <div class="club-img">
+                        <img src="club/raincoat.jpg" alt style="width:100%;border-radius: 5%;">
+                      </div>
+                      <div class="cover_text">
+                        <p style="color:#463F3A;font-weight: bold;">「雨」你「衣」起上學</p>
+                        <p style="font-size: 17px;">
+                          除了舉辦英文營隊，也為柬埔寨當地長期合作的組織(KAKO)募款。<br>
+                          活動目的主要是幫助當地的小孩在雨季時，有雨衣可以穿去上學。
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="area">
+                      <div class="club-img">
+                        <img src="club/share.jpg" alt style="width:100%;border-radius: 5%;">
+                      </div>
+                      <div class="cover_text">
+                        <p style="color:#463F3A;font-weight: bold;">經驗分享</p>
+                        <P style="font-size: 17px;">
+                          在海外志工隊一年的期程結束後，<br>
+                          曾向國貿系的學弟妹及鄰近高中分享做志工的收穫及成長。
+                        </P>
+                      </div>
+                    </div>
+                  </div>
+                  <p style="font-size:19px;font-weight: bold; color: #463F3A;">烏原小隊 2022/12-2023/05</p>
+                  <div class="cover">
+                    <div class="area">
+                      <div class="club-img">
+                        <img src="club/canva.JPG" alt style=width:100%;border-radius:5%;>
+                      </div>
+                      <div class="cover_text">
+                        <p style="color:#463F3A;font-weight: bold;">海外服務</p>
+                        <p style="font-size: 17px;">
+                          我在烏干達當地主要負責的其中一項是擔任canva資訊課程的助教。<br>
+                          在這個活動協助當地人熟悉平台的功能或提供排版建議。
+                        </p>
+                      </div>
+                    </div>
+                    <div class="area">
+                      <div class="club-img">
+                        <img src="club/0324.JPG" alt style="width:100%;border-radius: 5%;">
+                      </div>
+                      <div class="cover_text">
+                        <p style="color:#463F3A;font-weight: bold;">共盡「棉」薄之力，「非」你不可</p>
+                        <p style="font-size: 17px;">
+                          這個活動主要是成果發表及布衛生棉工作坊，除了分享在烏干達的所見所聞，<br>
+                          還有縫紉布衛生棉活動，改善當地女孩不因缺少生理用品而導致輟學的情況發生。
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+              </section>
+
+              
+              <section id="competition" class="card">
+                <div class="competition">競賽經歷</div>
+                <div>
+                  <p style="font-size:19px;font-weight: bold; color: #463F3A;">中原大學全人關懷獎</p>
+                </div>
+                <div>
+                  <img src="competition/結果.jpg" alt style="width: 40%; border-radius: 5%;">
+                </div>
+              </section>
+            </article>
+        
+            <aside class="card">
+              <h2 style="text-align: center;">About ME</h2>
+              <div class="photo">
+                <img src="personal/myphoto.jpg" style="width: 200px;height: 200px;border-radius: 50%;">
+              </div>
+              <div class="name">
+                <h1 class="myname"> 鄭羽翔 / Louise</h1>
+              </div>
+              <div class="t4">
+                <div class="intro">
+                  <p>Phone</p>
+                  <p>
+                    <a href="mailto:apple41079@gmail.com" style="text-decoration:none;color: #463F3A;">Mail</a>
+                  </p>
+                  <p>Graduate</p>
+                </div>
+                <div class="intro">
+                  <p>0965-438-628</p>
+                  <p>
+                    <a href="mailto:apple41079@gmail.com" style="text-decoration:none;color: #463F3A;">apple41079@gmail.com</a>
+                  </p>
+                  <p>中原大學 國貿系</p>
+                </div>
+              </div>
+            </aside>
+        </main>
+        <div class="clearfix"></div>
+        <footer>
+            <h5> copyright @2023 All right reserved</h5>
+        </footer>
+    </body>
 </html>
