--- a/louise.html
+++ b/louise.html
@@ -84,7 +84,7 @@
                       </div>
                     </div>
                   </div>
-                  <p style="font-size:19px;font-weight: bold; color: #463F3A;">烏原小隊 2022/12-2023/05</p>
+                  <p style="font-size:19px;font-weight: bold; color: #463F3A;">| 烏原小隊 2022/12-2023/05</p>
                   <div class="cover">
                     <div class="area">
                       <div class="club-img">
@@ -131,7 +131,9 @@
                 <img src="personal/myphoto.jpg" style="width: 200px;height: 200px;border-radius: 50%;">
               </div>
               <div class="name">
-                <h1 class="myname"> 鄭羽翔 / Louise</h1>
+                <h1 class="myname1"> 鄭羽翔 / Louise</h1>
+                <h1 class="myname2">你不一定要很厲害，才能開始<br>你要開始，才能很厲害</h1>
+
               </div>
               <div class="t4">
                 <div class="intro">
@@ -140,6 +142,9 @@
                     <a href="mailto:apple41079@gmail.com" style="text-decoration:none;color: #463F3A;">Mail</a>
                   </p>
                   <p>Graduate</p>
+                  <p>
+                    <a href="https://www.instagram.com/yu_xiang__/ " style="text-decoration:none;color: #463F3A;">Instagram</a> 
+                  </p>
                 </div>
                 <div class="intro">
                   <p>0965-438-628</p>
