--- a/louise.html
+++ b/louise.html
@@ -125,7 +125,7 @@
               </section>
             </article>
         
-            <aside class="card">
+            <aside class="card" id="info">
               <h2 style="text-align: center;">About ME</h2>
               <div class="photo">
                 <img src="personal/myphoto.jpg" style="width: 200px;height: 200px;border-radius: 50%;">
